--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -172,8 +172,23 @@ body {
     justify-content: center;
     width: 100%;
     height: 100%;
-    cursor: pointer;
-    ;
+    cursor: grab;
+}
+
+.inventory-list__content--drag {
+    border: 1px solid #4D4D4D;
+    border-radius: 24px;
+    overflow: hidden;
+    /* position: absolute; */
+    position: relative;
+}
+
+.inventory-list__item--drag {
+    border: 0px;
+}
+
+.inventory-list__item--drag>.inventory-list__conten-count {
+    display: none;
 }
 
 .inventory-list__conten-count {
@@ -185,7 +200,7 @@ body {
     padding: 4px;
     /* border-radius: 5px; */
     border-top-left-radius: 10px;
-    border-bottom-right-radius: 22px;
+    /* border-bottom-right-radius: 22px; */
     font-size: 15px;
 }
 
